--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.7.1",
+    "@vime/react": "^5.3.1",
     "axios": "^0.24.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
